# AutomaticTableDetection

./: CMakeLists.txt
src/: main.cc
